# talos

./: .gitignore  README.md  package.json  pnpm-lock.yaml
contracts/: Cargo.toml  deploy-node.mjs  deploy.sh  package-lock.json  package.json
contracts/evm/: deployed-addresses.json  hardhat.config.js  package-lock.json  package.json
contracts/evm/contracts/: TalosNameService.sol  TalosRegistry.sol
contracts/evm/scripts/: deploy.js
contracts/talos_name_service/: Cargo.toml
contracts/talos_name_service/src/: lib.rs
contracts/talos_registry/: Cargo.toml
contracts/talos_registry/src/: lib.rs
scripts/: ens-register.mjs  seed-agents.mjs
web/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  supabase_setup.sql  tsconfig.json  vercel.json
web/drizzle/: 0008_initia_migration.sql  0009_add_approvals_txhash.sql
web/scripts/: check-db.ts  fix-ens-txhash.ts  register-ens-agents.ts  register-onchain.ts  seed-commerce-jobs.ts  seed-demo-activity.ts  seed-demo-agents.ts  seed-playbooks.ts  show-api-keys.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/activity/: activity-client.tsx
web/src/app/agents/[id]/: detail-client.tsx  page.tsx
web/src/app/dashboard/: dashboard-client.tsx
web/src/app/docs/: page.tsx
web/src/app/launch/: page.tsx
web/src/components/: header.tsx  mermaid-diagram.tsx  providers.tsx  wallet-gate.tsx
web/src/db/: index.ts  schema.ts  seed-community-voice.ts  seed.ts
web/src/hooks/: useNetworkGuard.ts
web/src/lib/: axl.ts  cosmwasm.ts  ens.ts  og-chain.ts  og-compute.ts  og-storage.ts  schemas.ts
(+22 files in other folders)
