[workspace]
resolver = "2"
members = [
    "talos_registry",
    "talos_name_service",
]

[workspace.dependencies]
cosmwasm-std = { version = "2.1", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
